# yamy

./: .clang-format  .clang-tidy  .clinerules  .cursorrules  .gitattributes  .gitignore  ARCHITECTURE_REFACTOR.md  BUGFIXES_2025-12-15.md  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CURRENT_E2E_STATUS.md  Catch2-debug-x86_64-data.cmake  Catch2Config.cmake  FINAL_STATUS.md  HANDOFF_TO_GEMINI.md  LICENSE  M00_MFF_IMPLEMENTATION_SUMMARY.md  M00_MFF_QUICK_START.md  M00_ROOT_CAUSE_ANALYSIS.md  M00_TEST_STEPS.md  M20_MIGRATION_COMPLETE.md  MANUAL-TEST-GUIDE.md  MIGRATION_PROGRESS.md  Microsoft.GSL-Target-debug.cmake  Microsoft.GSL-debug-x86_64-data.cmake  Microsoft.GSLConfig.cmake  PHASE2_COMPLETE.md  README.md  README_STRUCTURE.md  REFACTOR_PLAN.md  RELEASE-NOTES-1.0.md  TESTING_FRAMEWORK_DESIGN.md  TESTING_GUIDE.md  TEST_INFRASTRUCTURE_REFACTOR.md  UAT_ISSUES.md  UAT_STATUS_REPORT.md  YAMY_RUNNING_STATUS.md  (+67 more)
.gemini/: settings.json
.serena/: project.yml
docs/: ARCHITECTURE_FUTURE.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  CLEAN_CONFIG_SUMMARY.md  CODE_METRICS.md  CONAN_SETUP.md  CONFIG_ANALYSIS.md  CONTENTS-ja.html  CUSTOMIZE-ja.html  DEVELOPER_GUIDE.md  EVENT_FLOW_ARCHITECTURE.md  FINAL_CODE_REVIEW.md  FINAL_VALIDATION_REPORT.md  HANDOVER_REPORT.md  HANDOVER_REPORT_NEXT.md  IFDEF_REDUCTION_STRATEGY.md  IMPLEMENTATION_SUCCESS_ANALYSIS.md  IPC_PROTOCOL.md  JSON_REFACTORING_PLAN.md  LINUX-GUI-IMPLEMENTATION-PLAN.md  LINUX-QT-GUI-MANUAL.md  LINUX-QT-REMAINING-WORK.md  LINUX-SETUP.md  MIGRATION.md  MODERNIZATION_STATUS.md  NUMBER_MODIFIER_DESIGN.md  NUMBER_MODIFIER_USER_GUIDE.md  OBSERVED_MAPPINGS.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_REPORT.md  README-ja.html  README.md  SCAN_CODE_FIX.md  SPEC_DRIVEN_DEV_GUIDE.md  SYSTEMATIC_INVESTIGATION_SPEC.md  TESTING_FRAMEWORK.md  TESTING_SUMMARY.md  TOOLCHAIN_COMPARISON.md  TOOLCHAIN_VALIDATION_REPORT.md  TRACK1-JULES-TASKS.md  YAMY_GUI_TEST_REPORT.md  (+22 more)
driver/: README.txt  ioctl.h  keyque.c  log.c  log.h  mayud.c
examples/plugins/: CMakeLists.txt  README.md  example_plugin.cpp
keymaps/: 104.mayu  104on109.mayu  109.mayu  109_clean.mayu  109on104.mayu  config.json  config.mayu  config_clean.mayu  config_jp.mayu  config_us.mayu  default.mayu  dot.mayu  dvorakY.mayu  emacs-mode.json  emacsedit.mayu  hm.mayu  key_seq.mayu  master.mayu  master.mayu.backup  master.mayu.e2e_backup  master_clean.mayu  master_m00.mayu  master_m00.mayu.backup_physical  master_original_backup.mayu  repro_layer.mayu  test-locks.mayu  test-m00.json  test-modal-final.mayu  test-modal-simple.mayu  test-nomodal.mayu  test.mayu  test_M00.mayu  test_m00_e2e.mayu  test_master.mayu  test_minimal_m0.mayu  test_mod0_simple.mayu  test_mod0_working.mayu  test_remap.mayu  vim-mode-semicolon.json  vim-mode.json  (+1 more)
packaging/: yamy.desktop
proj/: distrib.vcxproj  distrib.vcxproj.filters  makefunc.vcxproj  regex32.vcxproj  regex64.vcxproj  yamy.props  yamy.sln  yamy.vcxproj  yamy.vcxproj.filters  yamy32.props  yamy32.vcxproj  yamy32.vcxproj.filters  yamy32dll.vcxproj  yamy32dll.vcxproj.filters  yamy64.props  yamy64.vcxproj  yamy64.vcxproj.filters  yamy64dll.vcxproj  yamy64dll.vcxproj.filters  yamy_test.vcxproj  yamyd32.vcxproj  yamyd32.vcxproj.filters  yamydll.props  yamyexe.props
resources/: yamy-gui.desktop
schema/: README.md  config.schema.json
scripts/: README.md  benchmark_build.sh  build.ps1  build_boost.bat  build_yamy.bat  check_antipatterns.ps1  check_encoding.ps1  check_header_guards.ps1  check_ifdef_usage.sh  check_missing_sources.sh  ci_static_analysis.sh  cmake_package.ps1  cmake_package.sh  fix_antipatterns.ps1  fix_encoding.ps1  fix_nulls.py  generate_wave2_prompts.ps1  install-hooks.sh  launch_yamy.bat  mingw_package.ps1  mingw_toolchain.cmake  pre-commit-metrics.sh  refactor_commands.py  revert_nullptr.ps1  run-clang-tidy.sh  track_legacy_strings.sh  track_sessions.ps1
setup/: installer.cpp  installer.h  setup-common.mak  setup.cpp  setup.rc  setuprc.h
src/: compiler_specific.h  compiler_specific_func.cpp  dlglog.h  dlgsetting.cpp  dlgsetting.h  dlgversion.cpp  dlgversion.h  errormessage.h  fixscancodemap.cpp.bak  fixscancodemap.h  fixscancodemap.h.bak  function.cpp  function.h  functions.h  hook.cpp  keyboard.h  layoutmanager.cpp  (+8 more)
src/platform/linux/: .clang-format  CMakeLists.txt  README.md  device_manager_linux.cpp  device_manager_linux.h  hook.h  hook_data_linux.cpp  input_driver_linux.cpp  input_hook_linux.cpp  input_hook_linux.h  input_injector_linux.cpp  ipc_control_server.cpp  ipc_control_server.h  ipc_linux.cpp  ipc_linux.h  keycode_mapping.cpp  keycode_mapping.h  platform_paths_linux.cpp  sync_linux.cpp  sync_linux.h  test_track_template.cpp  thread_linux.cpp  utf_conversion.h  window_system_linux.cpp  window_system_linux_hierarchy.cpp  window_system_linux_hierarchy.h  window_system_linux_manipulation.cpp  window_system_linux_manipulation.h  window_system_linux_monitor.cpp  window_system_linux_monitor.h  window_system_linux_mouse.cpp  window_system_linux_mouse.h  window_system_linux_queries.cpp  window_system_linux_queries.h  windowstool.h  x11_connection.cpp  x11_connection.h
src/ui/qt/: CMakeLists.txt  config_manager_dialog.cpp  config_manager_dialog.h  config_metadata_dialog.cpp  config_metadata_dialog.h  config_search_panel.cpp  config_search_panel.h  crash_report_dialog.cpp  crash_report_dialog.h  crosshair_widget_qt.cpp  crosshair_widget_qt.h  dialog_about_qt.cpp  dialog_about_qt.h  dialog_condition_generator_qt.cpp  dialog_condition_generator_qt.h  dialog_examples_qt.cpp  dialog_examples_qt.h  dialog_investigate_qt.cpp  dialog_investigate_qt.h  dialog_log_qt.cpp  dialog_log_qt.h  dialog_settings_qt.cpp  dialog_settings_qt.h  dialog_shortcuts_qt.cpp  dialog_shortcuts_qt.h  global_hotkey.cpp  global_hotkey.h  ipc_client_gui.cpp  ipc_client_gui.h  lock_indicator_widget.cpp  lock_indicator_widget.h  log_stats_panel.cpp  log_stats_panel.h  main_window_gui.cpp  main_window_gui.h  notification_history.cpp  notification_history.h  notification_prefs.cpp  notification_prefs.h  notification_sound.cpp  (+10 more)
(+1098 files in other folders)
